2004-05-27  Pascal Obry  <pascal@obry.org>

	* aws-client.adb:
	(Skip_Line): Add comment.
	(Read_Limited): Add comment. Set Limit to constant.
	 Minor reformatting.

	* aws-containers-tables.ads:
	(Index_Access): Removed.
	(Table_Type): Index is now an Index_Table.Map, we do not need the
	 access type anymore.
	
	* aws-containers-tables.adb:
	Update comments at the top of the unit.
	(Get_Indexes): Simplify code, we do not need to check for null
	 Table.Index.
	(Get_Names): Idem.
	(Name_Count): Idem.
	(Get_Name): Remove assert pragma for Table.Index /= null.
	(Get_Value): Idem.
	(Get_Values): Idem.

	* aws-containers-tables-set.adb:
	(Add): Update code to new Index type.
	(Update): Idem.
	(Free): Simplify code, we do not need to check for null.
	(Reset): Idem.

2004-05-27  Pascal Obry  <pascal@obry.org>

	* aws-client.ads:
	Minor reformatting.
	
        Following changes are a first step to use AI302.Containers instead
         of GNAT.Dynamic_Table. Some optimisations, possible with the new
         containers, will be done in following check-ins.

	* aws-services-dispatchers-uri.ads,
          aws-services-dispatchers-uri.adb:
	Remove use of GNAT.Dynamic_Table and use AI302.Containers instead.
        Update copyright notice.

	* aws-services-dispatchers-timer.ads,
          aws-services-dispatchers-timer.adb:
	Remove use of GNAT.Dynamic_Table and use AI302.Containers instead.
        Update copyright notice.

	* aws-containers-tables.ads, aws-containers-tables-set.adb:
	Remove use of GNAT.Dynamic_Table and use AI302.Containers instead.

	* aws-containers-tables.adb:
	Remove use of GNAT.Dynamic_Table and use AI302.Containers instead.
        (Get_Names): Use AI302 sorting routine instead of simple bubble sort.

2004-05-27  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-buffered.ads, aws-net-buffered.adb:
	(Read): Routine publised.

	* aws-client.ads:
	(Transfer_Type): New type.
	(HTTP_Connection): New fields Length and Transfer for support streaming
	 read.