@@ -1,3 +1,9 @@
+2004-05-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.adb:
+	(Get_Response): Do not check for Content-Length = 0.
+	(Read_Some): Check for Length = 0 before call to socket.
+
 2004-05-27  Pascal Obry  <pascal@obry.org>
 
 	* aws-client.adb:
